preparing for change

--- a/rhel/webdev/install_node_app.yml
+++ b/rhel/webdev/install_node_app.yml
@@ -9,6 +9,8 @@
       state: directory
       mode: '0755'
 
+# TODO: get the file from a git repo
+
   - name: copy node app to webapp directory
     copy:
       src: hello.js
