added install of git

--- a/rhel/webdev/install_node_app.yml
+++ b/rhel/webdev/install_node_app.yml
@@ -9,7 +9,10 @@
       state: directory
       mode: '0755'
 
-# TODO: get the file from a git repo
+  - name: Ensure git is installed
+    ansible.builtin.yum:
+      name: git
+      state: latest
 
   - name: Clone the repository
     ansible.builtin.git:
