fix for missing version

--- a/rhel/webdev/install_node_app.yml
+++ b/rhel/webdev/install_node_app.yml
@@ -18,7 +18,7 @@
     ansible.builtin.git:
       dest: /var/tmp/gitrepo
       repo: "{{ git_repository }}"
-      version: "{{ git_version | default() }}"
+      version: "{{ git_version | default(omit) }}"
 
   - name: copy node app to webapp directory
     copy:
